fixed overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,9 +52,7 @@ body{
 }
 
 @media only screen and (max-width:856px){
-    main{
-        overflow-x:hidden;
-    }
+  
     .homereview .header-container .red-arrow-icon{
         top:81%;
     }
